--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "url-loader": "^0.5.7"
   },
   "devDependencies": {
+    "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
