--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-preset-react": "^6.11.1",
     "bootstrap": "^3.3.7",
     "bootstrap-loader": "^1.1.6",
+    "browserify": "^13.1.0",
+    "browserify-incremental": "^3.1.1",
     "file-loader": "^0.9.0",
     "iconfont-loader": "0.0.1",
     "imports-loader": "^0.6.5",
@@ -36,6 +38,7 @@
     "react-portal": "^2.2.1",
     "react-router": "^2.7.0",
     "react-tabs": "^0.7.0",
+    "reactify": "^1.1.1",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
